# html-to-markdown

./: .gh-actions-updater.toml  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .rumdl.toml  .textlintrc.json  .typos.toml  ATTRIBUTIONS.md  BASELINE_BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IMPLEMENTATION_PLAN.md  Package.swift  README.md  RUST_DEPENDENCIES.md  SECURITY.md  Taskfile.yaml  V2_API_DESIGN.md  WHITESPACE_ANALYSIS.md  ai-rulez.yaml  alef.toml  analysis_options.yaml  biome.json  build_rust.sh  composer.json  deny.toml  mkdocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test_aggressive.rs  test_preprocessing.rs  (+2 more)
cli-proxy/pypi/: README.md  pyproject.toml
cli-proxy/pypi/html_to_markdown_cli/: cli.py  downloader.py
crates/html-to-markdown/: Cargo.toml  README.md
crates/html-to-markdown-cli/: Cargo.toml
crates/html-to-markdown-cli/src/: args.rs  convert.rs  main.rs
crates/html-to-markdown-cli/tests/: cli_test.rs  mcp_smoke.rs
crates/html-to-markdown-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/html-to-markdown-ffi/include/: html_to_markdown.h
crates/html-to-markdown-ffi/src/: conversion.rs  lib.rs
crates/html-to-markdown-ffi/src/visitor/: registry_generated.rs
crates/html-to-markdown-node/: Cargo.toml  index.d.ts  index.js  package.json
crates/html-to-markdown-node/npm/darwin-arm64/: README.md  package.json
crates/html-to-markdown-node/npm/darwin-x64/: README.md  package.json
crates/html-to-markdown-node/src/: lib.rs  options.rs  tests.rs
crates/html-to-markdown-php/: Cargo.toml
crates/html-to-markdown-php/src/: composer.json  lib.rs  options.rs  phpstan.neon
crates/html-to-markdown-py/: Cargo.toml  README.md  pyproject.toml
crates/html-to-markdown-py/src/: lib.rs  options.rs  pyproject.toml
crates/html-to-markdown-wasm/: Cargo.toml  README.md  debug_test.mjs  package.json
crates/html-to-markdown-wasm/scripts/: patch-bundler-entry.js
crates/html-to-markdown-wasm/src/: lib.rs  options.rs  tests.rs
crates/html-to-markdown/examples/: basic.rs  table.rs  test_deser.rs  test_escape.rs  test_inline_formatting.rs  test_lists.rs  test_semantic_tags.rs  test_tables.rs  test_task_lists.rs  test_whitespace.rs
crates/html-to-markdown/src/: convert_api.rs  converter.rs  error.rs  exports.rs  hocr.rs  inline_images.rs  lib.rs  options.rs  sanitizer.rs  text.rs  visitor_helpers.rs
crates/html-to-markdown/tests/: br_in_inline_test.rs  commonmark_compliance_test.rs  compact_tables_test.rs  concurrency_test.rs  deep_nesting_overflow.rs  djot_output_test.rs  exclude_selectors_test.rs  integration_test.rs  issue_121_regressions.rs  issue_127_regressions.rs  issue_128_regressions.rs  issue_131_regressions.rs  issue_134_regressions.rs  issue_139_regressions.rs  issue_140_regressions.rs  issue_143_regressions.rs  issue_145_regressions.rs  issue_146_regressions.rs  issue_176_regressions.rs  issue_190_regressions.rs  issue_199_regressions.rs  issue_200_regressions.rs  issue_212_regressions.rs  issue_216_217_regressions.rs  issue_396_backticks_blank_line.rs  issue_397_strict_autolink.rs  issue_398_convert_into_option.rs  json_ld_script_extraction.rs  lists_test.rs  nested_list_duplication.rs  perf_nested_layout_tables.rs  plain_output_test.rs  preprocessing_tests.rs  prescan_test.rs  reference_links_test.rs  regression_379.rs  repro_issue_275.rs  sectioning_elements_test.rs  skip_images_test.rs  tables_test.rs  (+32 more)
e2e/python/: conftest.py  pyproject.toml
e2e/python/tests/: test_conversion.py  test_edge_cases.py  test_metadata.py  test_options.py  test_real_world.py  test_result.py  test_smoke.py  test_structure.py  test_visitor.py
tools/benchmark-harness/: Cargo.toml  README.md  guardrails.json
tools/benchmark-harness/baselines/: baseline.json
tools/benchmark-harness/examples/: tier1_routing.rs
tools/benchmark-harness/fixtures/: groups.toml
tools/benchmark-harness/profiles/: main-bail-survey.md  main-tier1-stage-e.md  main-tier1-stage-g.md  main-tier1-vs-tier2.md  main-tier2-baseline.md
tools/benchmark-harness/snapshots/: mdream__github-markdown-complete.html__atx_closed.snap  mdream__github-markdown-complete.html__default.md  mdream__github-markdown-complete.html__default.snap  mdream__github-markdown-complete.html__no_images.snap  mdream__github-markdown-complete.html__no_metadata.md  mdream__github-markdown-complete.html__no_metadata.snap  mdream__github-markdown-complete.html__reference_links.md  mdream__mdn-array.html__atx_closed.snap  mdream__mdn-array.html__default.md  mdream__mdn-array.html__default.snap  mdream__mdn-array.html__no_images.snap  mdream__mdn-array.html__no_metadata.md  mdream__mdn-array.html__no_metadata.snap  mdream__mdn-array.html__reference_links.md  mdream__nuxt-example.html__atx_closed.snap  mdream__nuxt-example.html__no_images.snap  mdream__nuxt-example.html__no_metadata.snap  mdream__nuxt-example.html__skip_images.md  mdream__react-learn.html__atx_closed.snap  mdream__react-learn.html__default.snap  mdream__react-learn.html__no_images.snap  mdream__react-learn.html__no_metadata.md  mdream__react-learn.html__no_metadata.snap  mdream__react-learn.html__reference_links.md  mdream__react-learn.html__skip_images.md  mdream__vuejs-docs.html__atx_closed.snap  mdream__vuejs-docs.html__default.md  mdream__vuejs-docs.html__default.snap  mdream__vuejs-docs.html__no_images.snap  mdream__vuejs-docs.html__no_metadata.md  mdream__vuejs-docs.html__no_metadata.snap  mdream__vuejs-docs.html__reference_links.md  mdream__wikipedia-small.html__atx_closed.snap  mdream__wikipedia-small.html__default.snap  mdream__wikipedia-small.html__no_images.snap  mdream__wikipedia-small.html__no_metadata.md  mdream__wikipedia-small.html__no_metadata.snap  mdream__wikipedia-small.html__reference_links.md  mdream__wikipedia-small.html__skip_images.md  real-world__issues__gh-121-hacker-news.html__atx_closed.snap  (+109 more)
tools/benchmark-harness/src/: bench.rs  fixture.rs  lib.rs  main.rs  oracle.rs  schema.rs  survey.rs
(+910 files in other folders)
