[workspace]
resolver = "2"
members = [
    "crates/html-to-markdown",
    "crates/html-to-markdown-cli",
    "crates/html-to-markdown-py",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/html-to-markdown"
homepage = "https://github.com/Goldziher/html-to-markdown"

[workspace.dependencies]
# Core library
html-to-markdown = { path = "crates/html-to-markdown" }

# HTML parsing
scraper = "0.21"
html5ever = "0.29"
markup5ever_rcdom = "0.3"

# Utilities
regex = "1.11"
once_cell = "1.21"
thiserror = "2.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.26.0", features = ["abi3-py310"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
