[workspace]
resolver = "2"
members = [
    "crates/html-to-markdown",
    "crates/html-to-markdown-cli",
    "crates/html-to-markdown-ffi",
    "crates/html-to-markdown-node",
    "crates/html-to-markdown-php",
    "crates/html-to-markdown-py",
    "crates/html-to-markdown-wasm",
]
exclude = [
    "packages/elixir/native/html_to_markdown_nif",
    "packages/r/src/rust",
    "packages/ruby/ext/html_to_markdown_rb/native",
    "packages/ruby/vendor",
    "test_apps/rust",
    "tests/test_apps/elixir/deps",
]

[workspace.package]
version = "3.2.6"
edition = "2024"
authors = ["Na'aman Hirschfeld <naaman@kreuzberg.dev>"]
description = "High-performance HTML to Markdown converter"
license = "MIT"
repository = "https://github.com/kreuzberg-dev/html-to-markdown"
homepage = "https://kreuzberg.dev"
documentation = "https://docs.rs/html-to-markdown-rs"
readme = "README.md"
keywords = ["html", "markdown", "converter"]
categories = ["text-processing", "web-programming"]
rust-version = "1.85"

[workspace.dependencies]
ahash = { version = "0.8", default-features = false, features = [
    "std",
    "compile-time-rng",
] }
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"
encoding_rs = "0.8"
ext-php-rs = "0.15.10"
html-to-markdown-rs = { version = "3.1.0", path = "crates/html-to-markdown" }
html5ever = "0.39.0"
once_cell = "1.21"
pyo3 = { version = "0.28.3", features = ["abi3-py310"] }
rayon = "1.12"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27"
thiserror = "2.0"
tl = { package = "astral-tl", version = "0.7.11" }
toml = "1.1"
which = "8"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 } # Allow multiple dependency versions (common in large workspaces)

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
debug = 1

[patch.crates-io]
html-to-markdown-rs = { path = "crates/html-to-markdown" }
