[workspace]
resolver = "2"
members = [
    "crates/html-to-markdown",
    "crates/html-to-markdown-cli",
    "crates/html-to-markdown-ffi",
    "crates/html-to-markdown-node",
    "crates/html-to-markdown-php",
    "crates/html-to-markdown-py",
    "crates/html-to-markdown-rs-jni",
    "crates/html-to-markdown-wasm",
    "packages/dart/rust",
    "packages/swift/rust",
    "tools/benchmark-harness",
]
exclude = [
    "e2e/rust",
    "packages/elixir/native/html_to_markdown_nif",
    "packages/r/src/rust",
    "packages/ruby/ext/html_to_markdown_rb",
    "packages/ruby/vendor",
    "test_apps/rust",
    "tests/test_apps/elixir/deps",
]

[workspace.package]
version = "3.6.7"
edition = "2024"
authors = ["Na'aman Hirschfeld <naaman@kreuzberg.dev>"]
description = "High-performance HTML to Markdown converter"
license = "MIT"
repository = "https://github.com/kreuzberg-dev/html-to-markdown"
homepage = "https://kreuzberg.dev"
documentation = "https://docs.rs/html-to-markdown-rs"
readme = "README.md"
keywords = ["html", "markdown", "converter"]
categories = ["text-processing", "web-programming"]
rust-version = "1.85"

[workspace.dependencies]
ahash = { version = "0.8", default-features = false, features = ["std", "compile-time-rng"] }
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"
encoding_rs = "0.8"
ext-php-rs = "0.15.15"
html-to-markdown-rs = { version = "3.6.7", path = "crates/html-to-markdown" }
html5ever = "0.39.0"
once_cell = "1.21"
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
rayon = "1.12"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27"
thiserror = "2.0"
tl = { package = "astral-tl", version = "0.7.11" }
toml = "1.1"
which = "8"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(alef)', 'cfg(feature, values("testkit"))'] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 } # Allow multiple dependency versions (common in large workspaces)
cargo_common_metadata = { level = "allow", priority = 1 } # Binding crates are internal, don't need full crates.io metadata
# Allow common patterns in alef-generated binding code
unnecessary_cast = { level = "allow", priority = 1 }
unused_unit = { level = "allow", priority = 1 }
unwrap_or_default = { level = "allow", priority = 1 }
derivable_impls = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
needless_borrows_for_generic_args = { level = "allow", priority = 1 }
useless_conversion = { level = "allow", priority = 1 }
unnecessary_fallible_conversions = { level = "allow", priority = 1 }
arc_with_non_send_sync = { level = "allow", priority = 1 } # ConversionOptionsBuilder holds Box<dyn HtmlVisitor> — not Send/Sync

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
debug = 1

[patch.crates-io]
html-to-markdown-rs = { path = "crates/html-to-markdown", version = "3.6.7" }
