[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html-to-markdown-cli"
version = "0.1.0"
description = "CLI proxy for html-to-markdown — downloads and runs the native html-to-markdown binary from GitHub releases."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Na'aman Hirschfeld", email = "naaman@kreuzberg.dev" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/kreuzberg-dev/html-to-markdown"
Repository = "https://github.com/kreuzberg-dev/html-to-markdown.git"
Issues = "https://github.com/kreuzberg-dev/html-to-markdown/issues"

[project.scripts]
html-to-markdown = "html_to_markdown_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["html_to_markdown_cli"]
