[package]
name = "html-to-markdown-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Command-line interface for html-to-markdown - high-performance HTML to Markdown converter"
keywords = ["html", "markdown", "cli", "converter", "html5ever"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "html-to-markdown"
path = "src/main.rs"

[dependencies]
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
encoding_rs.workspace = true
html-to-markdown-rs = { workspace = true, features = [
    "metadata",
    "inline-images",
    "visitor",
    "serde",
] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "blocking",
    "rustls",
    # NOTE: do NOT enable the `brotli` feature. It pulls `async-compression`
    # which transitively pins `brotli = 8.x`, but brotli 8.x expects
    # `alloc-no-stdlib` 3.x; the workspace resolves alloc-no-stdlib to 2.x for
    # other deps, and the resulting trait-bound mismatch (`StandardAlloc:
    # alloc::Allocator<...>`) breaks `cargo build` on stable rustc 1.96.
    # Observed on html-to-markdown v3.6.3 Publish run 27488669093 ubuntu-latest
    # wheel job (attempt 2). gzip+deflate are sufficient for the CLI's HTTP
    # response decompression.
    "gzip",
    "deflate",
    "charset",
] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"

[lints]
workspace = true
