[package]
name = "html-to-markdown-ffi"
version = "3.5.0"
edition = "2021"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["html", "markdown", "converter"]
categories = ["text-processing"]
repository = "https://github.com/kreuzberg-dev/html-to-markdown"

# Deps below are emitted unconditionally by the alef FFI scaffold for
# manifest stability across regens. h2m's FFI binding has no trait bridges
# and no async/streaming today, so `async-trait` and `tokio` are unused.
# Silence cargo-machete rather than flapping every prek run.
[package.metadata.cargo-machete]
ignored = ["async-trait", "tokio"]

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []

[dependencies]
async-trait = "0.1"
html-to-markdown-rs = { path = "../html-to-markdown", features = [
    "full",
    "metadata",
    "visitor",
    "serde",
    "inline-images",
] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
