[package]
name = "html-to-markdown-ffi"
version = "3.5.0"
edition = "2021"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["html", "markdown", "converter"]
categories = ["text-processing"]
repository = "https://github.com/kreuzberg-dev/html-to-markdown"

# `serde_json` and `tokio` are emitted unconditionally above so the manifest
# is stable across regens (and so the C FFI codegen can pull them in when an
# async / Result-typed function appears in the API surface), but for umbrella
# crates with no async fns and no JSON-marshalled return types they are
# genuinely unused. The conditional `async-trait` / `futures-util` deps are
# similarly flagged when the umbrella has trait-bridge / streaming adapters
# configured but no actual async-trait / async-stream callsite in the
# generated FFI shim.
[package.metadata.cargo-machete]
ignored = ["serde_json", "tokio", "async-trait"]

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []

[dependencies]
async-trait = "0.1"
html-to-markdown-rs = { path = "../html-to-markdown", features = [
    "full",
    "metadata",
    "visitor",
    "serde",
    "inline-images",
] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
