[package]
name = "html-to-markdown-ffi"
version = "3.6.6"
edition = "2021"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["converter", "html", "markdown"]
categories = []
repository = "https://github.com/kreuzberg-dev/html-to-markdown"

# `serde_json`, `ahash`, and `tokio` are emitted unconditionally above so the
# manifest is stable across regens (and so the C FFI codegen can pull them in
# when an async / Result-typed function appears in the API surface), but for
# umbrella crates with no async fns and no JSON-marshalled return types they
# are genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming adapters
# configured but no actual async-trait / async-stream callsite in the generated
# FFI shim.
[package.metadata.cargo-machete]
ignored = ["ahash", "serde_json", "tokio", "async-trait"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []

[dependencies]
ahash = "0.8"
async-trait = "0.1"
html-to-markdown-rs = { path = "../html-to-markdown", version = "3.6.6", features = ["serde", "metadata", "visitor", "inline-images", "testkit"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
