[package]
name = "html-to-markdown-node"
version = "3.5.1"
edition = "2024"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["html", "markdown", "converter"]
categories = ["text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
html-to-markdown-rs = { version = "3.5.1", path = "../html-to-markdown", features = ["full", "metadata", "visitor", "serde", "inline-images"] }
napi = { version = "3", features = ["async"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# `serde_json` is emitted unconditionally above so the manifest is stable
# across regens, but for umbrella crates with no JSON-marshalled return types
# it is genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming
# adapters configured but no actual async-trait callsite in this binding.
[package.metadata.cargo-machete]
ignored = ["serde_json", "async-trait"]

[build-dependencies]
napi-build = "2"
