[package]
name = "html-to-markdown-node"
version = "3.6.0-rc.25"
edition = "2024"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["converter", "html", "markdown"]
categories = []

# `serde_json` is emitted unconditionally above so the manifest is stable
# across regens, but for umbrella crates with no JSON-marshalled return types
# it is genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming
# adapters configured but no actual async-trait callsite in this binding.
[package.metadata.cargo-machete]
ignored = ["serde_json", "async-trait", "tokio-util"]

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
html-to-markdown-rs = { version = "3.6.0-rc.25", path = "../html-to-markdown", features = ["serde", "metadata", "visitor", "inline-images", "testkit"] }
napi = { version = "3", features = ["async"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }

[build-dependencies]
napi-build = "2"
