[package]
name = "html-to-markdown-php"
version = "3.5.0"
edition = "2024"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["html", "markdown", "converter"]
categories = ["text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
html-to-markdown-rs = { version = "3.5.0", path = "../html-to-markdown", features = ["full", "metadata", "visitor", "serde", "inline-images"] }
ext-php-rs = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# `ahash` is conditionally referenced: only when the umbrella crate exposes
# `AHashMap<Cow<str>, _>` parameters (the conditional `__*_ahash` shim rebuilds).
# `futures-util` is similarly conditional on streaming adapters being declared.
[package.metadata.cargo-machete]
ignored = ["tokio", "async-trait", "ahash"]

[features]
extension-module = []
