[package]
name = "html-to-markdown-php"
version = "3.6.7"
edition = "2024"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["converter", "html", "markdown"]
categories = []

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "async-trait"]

[lib]
crate-type = ["cdylib"]

[features]
extension-module = []

[dependencies]
async-trait = "0.1"
ext-php-rs = "0.15.15"
html-to-markdown-rs = { version = "3.6.7", path = "../html-to-markdown", features = ["serde", "metadata", "visitor", "inline-images", "testkit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
