[package]
name = "html-to-markdown-py"
version = "3.5.0"
edition = "2024"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["html", "markdown", "converter"]
categories = ["text-processing"]

# `pyo3-async-runtimes` and `serde_json` are emitted unconditionally above so
# the manifest is stable across regens, but for umbrella crates with no
# async fns or no JSON-marshalled return types they are genuinely unused.
# List them here so `cargo machete` doesn't flag the no-async-no-json case
# as a real finding.
[package.metadata.cargo-machete]
ignored = ["pyo3-async-runtimes", "serde_json"]

[lib]
name = "_html_to_markdown"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]

[dependencies]
async-trait = "0.1"
html-to-markdown-rs = { path = "../html-to-markdown", features = [
    "full",
    "metadata",
    "visitor",
    "serde",
    "inline-images",
] }
pyo3 = { version = "0.28" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
