[package]
name = "html-to-markdown-py"
version = "3.5.0-rc.3"
edition = "2024"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["html", "markdown", "converter"]
categories = ["text-processing"]

[lib]
name = "_html_to_markdown"
crate-type = ["cdylib"]

[dependencies]
html-to-markdown-rs = { version = "3.5.0-rc.3", path = "../html-to-markdown", features = ["full", "metadata", "visitor", "serde", "inline-images"] }
pyo3 = { version = "0.28" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }

# `pyo3-async-runtimes` and `serde_json` are emitted unconditionally above so
# the manifest is stable across regens, but for umbrella crates with no
# async fns or no JSON-marshalled return types they are genuinely unused.
# The conditional `async-trait` / `tokio` / `futures` deps are similarly
# flagged when the umbrella has trait-bridge / streaming adapters configured
# but no actual async-trait / async callsite in the generated PyO3 shim.
[package.metadata.cargo-machete]
ignored = ["pyo3-async-runtimes", "serde_json", "async-trait", "tokio"]

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]
