[package]
name = "html-to-markdown-wasm"
version = "3.1.0"
edition = "2024"
description = "High-performance HTML to Markdown converter"
license = "MIT"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository = "https://github.com/kreuzberg-dev/html-to-markdown"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
html-to-markdown-rs = { path = "../html-to-markdown", features = ["full"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
