[package]
name = "benchmark-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark harness for html-to-markdown-rs"
keywords = ["html", "markdown", "benchmark", "performance"]
categories = ["development-tools"]
readme = "README.md"

[[bin]]
name = "benchmark-harness"
path = "src/main.rs"

[features]
default = []
profiling = ["pprof"]
memory-profiling = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
visitor = ["html-to-markdown-rs/visitor"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
html-to-markdown-rs = { workspace = true, features = [
    "inline-images",
    "metadata",
] }

minijinja = { version = "2.18", features = ["json"] }

pprof = { version = "0.15", features = ["flamegraph"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

sysinfo = "0.38"
thiserror = { workspace = true }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }

toml = "1.0"

[lints]
workspace = true
